fix shifted legend and phenomenon list

--- a/www/css/main/main.css
+++ b/www/css/main/main.css
@@ -32,7 +32,7 @@ html,
 }
 .fullHeight {
   height: 100%;
-  position: relative;
+  /* position: absolute; */
   padding: 0px;
 }
 .content {
