--- a/www/less/main/offcanvas.less
+++ b/www/less/main/offcanvas.less
@@ -90,7 +90,8 @@ footer {
 
 .rightPanel {
     overflow: auto;
-    padding-right: 30px;
+    padding-right: 15px;
+    padding-left: 15px;
     height: 100% !important; /* to make overflow-y possible on all screen sizes */
     &.active {
         visibility: visible;
